# shove

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  cliff.toml  docker-compose.yml  package.json  pnpm-lock.yaml  vocs.config.ts  wrangler.toml
.github/workflows/: ci.yml  docs-build.yml  docs-preview.yml  publish.yml
benches/: autoscaler.rs  consumer_overhead.rs  stress.rs
docs/pages/: getting-started.mdx  index.mdx  reference.mdx
docs/pages/backends/: choosing.mdx  inmemory.mdx  kafka.mdx  nats.mdx  rabbitmq.mdx  sqs.mdx
docs/pages/backends/inmemory/examples/: audited.mdx  basic.mdx  consumer-groups.mdx  sequenced.mdx  stress.mdx
docs/pages/backends/kafka/examples/: audited.mdx  basic.mdx  sequenced.mdx  stress.mdx
docs/pages/backends/nats/examples/: audited.mdx  basic.mdx  sequenced.mdx  stress.mdx
docs/pages/backends/rabbitmq/examples/: audited.mdx  basic.mdx  concurrent.mdx  consumer-groups.mdx  exactly-once.mdx  sequenced.mdx  stress.mdx
docs/pages/backends/sqs/examples/: audited.mdx  autoscaler.mdx  basic.mdx  concurrent.mdx  consumer-groups.mdx  sequenced.mdx  stress.mdx
docs/pages/concepts/: broker.mdx  handlers.mdx  outcomes.mdx  topics.mdx
docs/pages/guides/: audit.mdx  exactly-once.mdx  groups.mdx  observability.mdx  retries.mdx  sequenced.mdx  shutdown.mdx
docs/pages/ops/: backends.mdx  performance.mdx
examples/: audited_consumer.rs  basic_pubsub.rs  concurrent_pubsub.rs  consumer_groups.rs  sequenced_pubsub.rs  stress.rs
examples/common/: stress_test.rs
examples/inmemory/: audited_consumer.rs  basic.rs  consumer_groups.rs  sequenced.rs  stress.rs
examples/kafka/: audited_consumer.rs  basic.rs  sequenced.rs  stress.rs
examples/nats/: audited_consumer.rs  basic.rs  sequenced.rs  stress.rs
examples/rabbitmq/: audited_consumer.rs  basic_pubsub.rs  concurrent_pubsub.rs  consumer_groups.rs  exactly_once.rs  sequenced_pubsub.rs  stress.rs
examples/sqs/: audited_consumer.rs  autoscaler.rs  basic_pubsub.rs  concurrent_pubsub.rs  consumer_groups.rs  sequenced_pubsub.rs  stress.rs
src/: audit.rs  autoscale_metrics.rs  autoscaler.rs  broker.rs  consumer.rs  consumer_group.rs  consumer_supervisor.rs  error.rs  handler.rs  lib.rs  macros.rs  markers.rs  metadata.rs  metrics.rs  outcome.rs  publisher.rs  publisher_internal.rs  retry.rs  topic.rs  topology.rs  topology_declarer.rs
src/backend/: autoscaler.rs  capability.rs  consumer.rs  mod.rs  options_inner.rs  publisher.rs  registry.rs  topology.rs
src/backends/: mod.rs
src/backends/inmemory/: autoscaler.rs  backend.rs  client.rs  constants.rs  consumer.rs  consumer_group.rs  mod.rs  publisher.rs  topology.rs
src/backends/kafka/: autoscaler.rs  backend.rs  client.rs  constants.rs  consumer.rs  consumer_group.rs  mod.rs  publisher.rs  topology.rs
src/backends/nats/: autoscaler.rs  backend.rs  client.rs  constants.rs  consumer.rs  consumer_group.rs  mod.rs  publisher.rs  topology.rs
src/backends/rabbitmq/: autoscaler.rs  backend.rs  client.rs  consumer.rs  consumer_group.rs  headers.rs  management.rs  mod.rs  publisher.rs  registry.rs  router.rs  topology.rs  typed.rs
src/backends/sns/: autoscaler.rs  backend.rs  client.rs  consumer.rs  consumer_group.rs  mod.rs  publisher.rs  registry.rs  router.rs  stats.rs  topology.rs
tests/: broker_close.rs  broker_inmemory.rs  inmemory_integration.rs  kafka_integration.rs  metrics_inmemory.rs  metrics_inmemory_group.rs  nats_integration.rs  rabbitmq_integration.rs  sns_integration.rs  sns_sqs_integration.rs  sqs_no_consumer_group.rs
