[package]
name = "shove"
version = "0.1.0"
description = "Pubsub utilities on steroids. Supports various queuing configurations and autoscaling consumer groups."
edition = "2024"
authors = ["Zannis Kalampoukis <zkalampoukis@gmail.com>"]
license = "MIT"
repository = "https://github.com/zannis/shove"
keywords = ["messaging", "rabbitmq", "pubsub", "consumer-groups", "autoscaling"]
categories = ["asynchronous"]

[features]
default = []
rabbitmq = ["dep:lapin", "dep:futures-lite", "dep:reqwest"]
sns = ["dep:aws-config", "dep:futures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
lapin = { version = "4", features = ["rustls--ring"], optional = true }
futures-lite = { version = "2", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }
aws-config = { version = "1.8.15", features = ["behavior-version-latest"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["rabbitmq"] }
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "autoscaler"
harness = false
required-features = ["rabbitmq"]

[[example]]
name = "basic_pubsub"
required-features = ["rabbitmq"]

[[example]]
name = "sequenced_pubsub"
required-features = ["rabbitmq"]

[[example]]
name = "consumer_groups"
required-features = ["rabbitmq"]
