[package]
name = "shove"
version = "0.6.3"
description = "Async tasks via pubsub on steroids. Comes with built-in support for complex queue configurations, audit logs, autoscaling consumer groups and more."
edition = "2024"
authors = ["Zannis Kalampoukis <zkalampoukis@gmail.com>"]
license = "MIT"
repository = "https://github.com/zannis/shove"
keywords = ["messaging", "rabbitmq", "pubsub", "consumer-groups", "autoscaling"]
categories = ["asynchronous"]

[features]
default = []
rabbitmq = ["dep:lapin", "dep:futures-lite", "dep:reqwest"]

# Opt-in exactly-once delivery for RabbitMQ consumers via AMQP transactions.
# Makes publish-to-hold-queue + ack atomic (tx_select/tx_commit), eliminating
# the publish-then-ack race at the cost of ~10-15× lower throughput per channel.
rabbitmq-transactional = ["rabbitmq"]

# SNS Publisher
pub-aws-sns = ["dep:aws-config", "dep:aws-sdk-sns"]

# Complete pubsub with AWS SNS and AWS SQS
aws-sns-sqs = ["pub-aws-sns", "dep:aws-sdk-sqs"]
audit = []
nats = ["dep:async-nats", "dep:bytes", "dep:futures-util"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lapin = { version = "4", features = ["rustls--ring"], optional = true }
futures-lite = { version = "2", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }
aws-config = { version = "1.8.15", features = ["behavior-version-latest"], optional = true }
aws-sdk-sns = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }
rand = "0.10"
async-nats = { version = "0.39", optional = true }
bytes = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["rabbitmq", "localstack"] }
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rand = "0.10"
[target.'cfg(target_os = "macos")'.dev-dependencies]
mach2 = "0.6"

[[bench]]
name = "autoscaler"
harness = false
required-features = ["rabbitmq"]

[[bench]]
name = "consumer_overhead"
harness = false
required-features = ["rabbitmq"]

[[example]]
name = "rabbitmq_basic_pubsub"
path = "examples/rabbitmq/basic_pubsub.rs"
required-features = ["rabbitmq"]

[[example]]
name = "rabbitmq_sequenced_pubsub"
path = "examples/rabbitmq/sequenced_pubsub.rs"
required-features = ["rabbitmq"]

[[example]]
name = "rabbitmq_consumer_groups"
path = "examples/rabbitmq/consumer_groups.rs"
required-features = ["rabbitmq"]

[[example]]
name = "rabbitmq_audited_consumer"
path = "examples/rabbitmq/audited_consumer.rs"
required-features = ["rabbitmq", "audit"]

[[example]]
name = "rabbitmq_concurrent_pubsub"
path = "examples/rabbitmq/concurrent_pubsub.rs"
required-features = ["rabbitmq"]

[[example]]
name = "rabbitmq_stress"
path = "examples/rabbitmq/stress.rs"
required-features = ["rabbitmq"]

[[example]]
name = "sqs_basic_pubsub"
path = "examples/sqs/basic_pubsub.rs"
required-features = ["aws-sns-sqs"]

[[example]]
name = "sqs_sequenced_pubsub"
path = "examples/sqs/sequenced_pubsub.rs"
required-features = ["aws-sns-sqs"]

[[example]]
name = "sqs_concurrent_pubsub"
path = "examples/sqs/concurrent_pubsub.rs"
required-features = ["aws-sns-sqs"]

[[example]]
name = "sqs_consumer_groups"
path = "examples/sqs/consumer_groups.rs"
required-features = ["aws-sns-sqs"]

[[example]]
name = "sqs_audited_consumer"
path = "examples/sqs/audited_consumer.rs"
required-features = ["aws-sns-sqs", "audit"]

[[example]]
name = "sqs_autoscaler"
path = "examples/sqs/autoscaler.rs"
required-features = ["aws-sns-sqs"]

[[example]]
name = "sqs_stress"
path = "examples/sqs/stress.rs"
required-features = ["aws-sns-sqs"]

[[example]]
name = "rabbitmq_exactly_once"
path = "examples/rabbitmq/exactly_once.rs"
required-features = ["rabbitmq-transactional"]

[[example]]
name = "nats_basic"
path = "examples/nats/basic.rs"
required-features = ["nats"]

[[example]]
name = "nats_sequenced"
path = "examples/nats/sequenced.rs"
required-features = ["nats"]

[[test]]
name = "rabbitmq_integration"
required-features = ["rabbitmq"]

[[test]]
name = "sns_integration"
required-features = ["pub-aws-sns"]

[[test]]
name = "sns_sqs_integration"
required-features = ["aws-sns-sqs"]

[[test]]
name = "nats_integration"
required-features = ["nats"]
